# RustWhats

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md
.github/workflows/: rust.yml
src/: domain.rs  infra.rs  main.rs  old.main.rs  runner.rs
src/domain/: command.rs  message_event.rs
src/infra/: executor.rs  whatsapp.rs
src/runner/: reducer.rs
