[package]
name = "RustWhats"
version = "0.1.0"
edition = "2024"

[dependencies]
qrcode = "0.14.1"
tokio = { version = "1.49.0", default-features = false, features = ["rt-multi-thread", "macros", "signal", "net", "time"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter", "fmt"] }

wacore = "0.2.0"
waproto = "0.2.0"
whatsapp-rust = { version = "0.2.0", features = ["signal"] }
whatsapp-rust-tokio-transport = "0.2.0"
whatsapp-rust-ureq-http-client = "0.2.0"

[profile.dev]
debug = 0
incremental = false

[profile.release]
debug = 0
lto = "thin"
codegen-units = 1
strip = "symbols"
